--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -1,1 +1,21 @@
 /* Add CSS Styling */
+
+.odd{
+    background-color: #ffc0cb;
+    font-family: verdana, "Dejavu Sans" , sans-serif;
+}
+
+.odd.second{
+    font-size: 24px;
+}
+
+#second{
+    color: #0000ff;
+    font-size: 36px;
+}
+
+#fourth{
+    background-color: #90ee90;
+    font-size: 36px;
+    font-weight: bold;
+}
